# salary

./: main.py  pyproject.toml  test.py
migrations/: env.py
migrations/versions/: 83ff9dc46513_salary_user.py  b6250da2a253_worker_fio.py  ca62acec4f9b_worker_create.py  fd1aa33cac24_database_creation.py
src/db/: __init__.py  database.py
src/regusers/: models.py  router.py  secure.py
src/salary/: models.py  router.py
src/settings/: config.py
src/static/css/: main.css
src/templates/regusers/: forgot_password.html  go_to_restore_password.html  login.html  new_password.html  register.html  user_not_found.html
src/templates/salary/: add_salary_increase_create.html  add_salary_increase_search_worker.html  add_worker_create_worker.html  add_worker_search_user.html  if_not_auth.html  if_token_superus_incorrect.html  salary_increase_is_not_none.html  salary_list.html  start.html  superuser.html  worker_is_not_none.html  you_not_superuser.html  you_superuser.html
